--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "teste-samuel-venturin",
+  "homepage": "https://samuelfranklin.github.io/teste-samuel-venturin",
   "version": "0.1.0",
   "private": true,
   "proxy": "https://test-frontend-uolpp.web.app",
@@ -16,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
